--- a/reto02/index.html
+++ b/reto02/index.html
@@ -4,10 +4,42 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Stats preview card component</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lexend+Deca:wght@100..900&display=swap" rel="stylesheet">
   </head>
   <body>
-    Get insights that help your business grow. Discover the benefits of data
-    analytics and make better decisions regarding revenue, customer experience,
-    and overall efficiency. 10k+ companies 314 templates 12m+ queries
+    <main class="principal">
+      <article class="card">
+        <figure class="card_media">
+          <img src="images/image-header-mobile.jpg" alt="" />
+        </figure>
+
+        <section class="card_body">
+          <h1 class="card_body_title">
+            Get <span>insights</span> that help your business grow.
+          </h1>
+          <h2 class="card_body_description">
+            Discover the benefits of data analytics and make better decisions
+            regarding revenue, customer experience, and overall efficiency.
+          </h2>
+          <dl class="card_stats">
+            <div class="stat">
+              <dd>10k+</dd>
+              <dt>COMPANIES</dt>
+            </div>
+            <div class="stat">
+              <dd>314</dd>
+              <dt>TEMPLATES</dt>
+            </div>
+            <div class="stat">
+              <dd>12m+</dd>
+              <dt>QUERIES</dt>
+            </div>
+          </dl>
+        </section>
+      </article>
+    </main>
   </body>
 </html>
